--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/incoming-envelope_1f4e8.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/incoming-envelope_1f4e8.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,22 +32,36 @@
     -->
     <title>Wave Portal</title>
     <meta name="title" content="Wave Portal" />
-    <meta name="description" content="I want to meet you! Send me a wave now!" />
-    
+    <meta
+      name="description"
+      content="I want to meet you! Send me a wave now!"
+    />
+
     <!-- Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buildspace.so/">
-    <meta property="og:title" content="Wave Portal">
-    <meta property="og:description" content="I want to meet you! Send me a wave now!">
-    <meta property="og:image" content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png">
-    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://buildspace.so/" />
+    <meta property="og:title" content="Wave Portal" />
+    <meta
+      property="og:description"
+      content="I want to meet you! Send me a wave now!"
+    />
+    <meta
+      property="og:image"
+      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png"
+    />
+
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://buildspace.so/">
-    <meta property="twitter:title" content="Wave Portal">
-    <meta property="twitter:description" content="I want to meet you! Send me a wave now!">
-    <meta property="twitter:image"
-      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png">
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://buildspace.so/" />
+    <meta property="twitter:title" content="Wave Portal" />
+    <meta
+      property="twitter:description"
+      content="I want to meet you! Send me a wave now!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://s3.amazonaws.com/cdn.buildspace.so/courses/ethereum-smart-contracts/metadata.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
